[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Intro/introMusic.mp3" type="AudioStream" id=2]
[ext_resource path="res://Menu/desktop-wallpaper-black-screen-on-get-plain-black.jpg" type="Texture" id=3]
[ext_resource path="res://Menu/pixil-frame-0(1).png" type="Texture" id=4]

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.5
margin_top = -40.0
margin_right = 31.5
margin_bottom = 34.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 65.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Start"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 65.0
margin_bottom = 44.0
text = "Controls"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 65.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="Sprites" type="Node" parent="."]

[node name="Background" type="Sprite" parent="Sprites"]
position = Vector2( 672, 408 )
scale = Vector2( 2.14588, 2.61088 )
z_index = -1
texture = ExtResource( 3 )

[node name="BackgroundImage" type="Sprite" parent="Sprites"]
position = Vector2( 640, 320 )
scale = Vector2( 0.103988, 0.0558 )
texture = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
